Fri Oct 12 21:37:25 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/webrick/test_cgi.rb (TestWEBrickCGI#test_cgi): skip a test
	  depending on locale on Windows. ENV[] doesn't work properly if
	  console code page is not equal to file system encoding.
	  [ruby-core:47910] [Bug #7140]

Fri Oct 12 20:40:29 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (posix_sh_cmds): the command name of colon is ":".

Fri Oct 12 18:18:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_get_path_check): path name must not contain NUL bytes.

Fri Oct 12 16:06:20 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/merger.rb: now can merge revision(s) without --ticket again.

Fri Oct 12 14:10:41 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (dir_config, init_mkmf): use configured libdir value as
	  default library path.  [ruby-core:43726] [Bug #6207]

Fri Oct 12 05:25:00 2012  Zachary Scott	<zzak@ruby-lang.org>

	* lib/timeout.rb (timeout):
	  Remove paragraph on wrong implementation detail.
	  [ruby-core:47739] [Bug #7088]

Thu Oct 11 23:09:46 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_sub{seq,pos,str}, rb_str_each_{line,codepoint}):
	  prevent String copies from GC.  [ruby-core:47881] [Bug #7135]

Thu Oct 11 07:40:50 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* iseq.c (insn_operand_intern): cast op to rb_call_info_t* before
	  compare with iseq->callinfo_entries whose type is rb_call_info_t*.

Thu Oct 11 03:37:08 2012  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_block.rb: add tests for block with super.

Thu Oct 11 02:54:07 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_dump.c: fix debug prints to catch up recent changes
	  such as VM data structures.

Thu Oct 11 02:50:34 2012  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (insn_operand_intern): add support disasm TS_CALLINFO
	  operands.

Wed Oct 10 15:12:48 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb (TestProcess#test_execopts_gid): skip on